<resources>
    <string name="app_name">android-example</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">仪表盘</string>
    <string name="title_center">我的</string>
    <string name="avatar">头像</string>
    <string name="image">图片</string>
    <string name="setting">设置</string>
    <string name="use_info">个人信息</string>
    <string name="download_cache">下载缓存</string>
    <string name="video_manager">视频文件管理</string>
    <string name="share_app">分享应用</string>
    <string name="message_request">意见反馈</string>
    <string name="setting_notify">接收新消息通知</string>
    <string name="setting_request">允许视频通话和语音请求</string>
    <string name="setting_sound">声音</string>
    <string name="setting_shake">震动</string>
    <string name="link">link</string>
    <string name="comment">comment</string>
    <string name="date_desc">2d ago</string>
    <string name="angular">Angular</string>
    <string name="app_store">AppStore</string>
    <string name="boat">Boast</string>
    <string name="briefcase">Briefcase</string>
    <string name="football">Football</string>
    <string name="easel">Easel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
